--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "engines": {
     "node": ">=16.0.0",
-    "yarn":">=1.22.0",
-    "npm":">=8.0.0"
+    "yarn": ">=1.22.0",
+    "npm": ">=8.0.0"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "next": "12.1.6",
@@ -24,6 +25,7 @@
     "@types/react-dom": "18.0.5",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
+    "prettier": "^2.6.2",
     "typescript": "4.7.2"
   }
 }
