--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": ">=8.0.0"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -26,6 +26,7 @@
     "@types/node": "17.0.38",
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
+    "cross-env": "^7.0.3",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
     "husky": "^8.0.1",
